Basic implementation complete

--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "types": "tsc --noEmit",
     "lint": "eslint"
   },
   "dependencies": {
+    "@liveblocks/client": "^3.13.5",
+    "@liveblocks/node": "^3.13.5",
+    "@liveblocks/react": "^3.13.5",
+    "@monaco-editor/react": "^4.7.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
+    "nanoid": "^5.1.6",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -19,6 +29,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "dotenv": "^17.3.1",
+    "drizzle-kit": "^0.31.9",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
