--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "NODE_ENV=production tsx src/server/index.ts",
     "types": "tsc --noEmit",
-    "lint": "eslint"
+    "lint": "eslint",
+    "socket-server": "tsx src/server/standalone.ts"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
